# sciagent

./: .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  docker-compose.yml
server/: pyproject.toml
server/agent/: __init__.py  dataset_discovery.py  orchestrator.py  prompts.py  registry.py  tracing.py
server/domain/: __init__.py  airr_assay.py  assay_ranking.py  dataset_access_discovery.py  dataset_annotation.py  dataset_context_export.py  dataset_repository_registry.py  dataset_search.py  evidence_extraction.py  facet_abbreviation_resolution.py  facet_match_quality.py  facet_phrase_resolution.py  facet_query_normalization.py  facet_search_strategies.py  gxa_assay.py  llm_query_interpretation.py  omicsdi_assay.py  ontology_grounder.py  ontology_grounding.py  query_interpretation.py  ranking.py  repository_facet_capabilities.py  score_breakdown.py  source_registry.py  synonym_classification.py  text_broad_search.py  tissue_anatomy.py
server/evaluation/: __init__.py  golden_queries.py
server/sciagent_server/: __init__.py  config.py  main.py
server/scripts/: run_golden_queries.py
server/tests/: test_airr_assay.py  test_assay_ranking.py  test_asthma_immport_query.py  test_asthma_vivli_query.py  test_breast_cancer_omicsdi_query.py  test_dataset_access_discovery.py  test_dataset_load_more.py  test_dataset_repository_registry.py  test_excluded_sources.py  test_expression_atlas.py  test_expression_atlas_multi_strategy.py  test_facet_abbreviation_resolution.py  test_facet_phrase_resolution.py  test_facet_phrase_single_word.py  test_geo_max_results.py  (+38 more)
(+75 files in other folders)
