[project]
name = "sciagent-server"
version = "0.1.0"
description = "SciAgent Studio — multi-database scientific search agent API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "pydantic>=2.0.0",
]

[project.scripts]
sciagent-server = "sciagent_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sciagent_server"]
